svirpti/tests/snapshots/simple__check_assign_encoding-4.snap
---
source: svirpti/tests/simple.rs
expression: encoded
---
program {
  declarations:
    sorts:
    variables:
      a@0: Int
      b@0: Int
      a@1: Int
      BB@3: Bool
      BB@2: Bool
      BB@1: Bool
      BB@0: Bool
    functions:
    labels:
      l1
  assertions:
    (BB@3==true)
    (BB@2==(lblneg(l1: (a@1==b@0))&&BB@3))
    (BB@1==((a@1==b@0)==>BB@2))
    (BB@0==BB@1)
    !BB@0
}

